# tarkov-backend

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  dockerfile  main.py  main.spec  pyproject.toml
resources/alembic/: env.py
resources/alembic/versions/: 0001_6ae864e881c7_.py  0002_21cf571c901b_add_account_nickname.py  939371a7b93f_make_nickname_not_nullable_add_unique_.py
resources/config/: patch_nodes.yml  patches.yml
resources/database/base/: globals.json
resources/database/flea_market/: base.json  categories.json
resources/database/hideout/: settings.json
resources/database/locations/: DynamicLootTable.json  StaticLootTable.json
src/: app.py  container.py  dependencies.py  paths.py  responses.py  schema.py  settings.py  utils.py
src/accounts/: schema.py  services.py
src/database/: base.py  dependencies.py  migrations.py  models.py
src/languages/: router.py
src/launcher/: router.py  schema.py  services.py
src/modules/accounts/: dependencies.py  services.py
src/modules/friends/: router.py  schema.py
src/modules/hideout/: router.py
src/modules/items/: actions.py  commands.py  handlers.py  inventory.py  repository.py  router.py  types.py
src/modules/languages/: router.py  services.py
src/modules/launcher/: router.py
src/modules/mail/: router.py
src/modules/notifier/: router.py
src/modules/profile/: commands.py  dependencies.py  router.py  schema.py  services.py  types.py
src/modules/quests/: router.py
src/modules/startup/: router.py  (+1 more)
src/server/: __init__.py  middleware.py  requests.py  responses.py  routes.py
src/startup/: router.py
tests/: conftest.py  utils.py
tests/api/: test_content_encoding.py  test_hello_world.py
tests/unit/: test_editions_service.py  test_generate_certificates.py
(+131 files in other folders)
