[tool.poetry]
name = "tarkov-backend"
version = "0.0.1"
description = ""
authors = ["Doctor <thirvondukr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
pydantic = "^1.9.0"
httpx = "^0.22.0"
aiofiles = "^0.8.0"
cryptography = "^36.0.1"
orjson = "3.6.5"
SQLAlchemy = "^1.4.31"
aiosqlite = "^0.17.0"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
flake8 = "^4.0.1"
types-aiofiles = "^0.8.3"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "(dist|resources|tests)"
plugins = ["pydantic.mypy"]

follow_imports = "silent"
ignore_missing_imports = true

check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_optional = true
strict_equality = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
